Bug #73564, clean up excessive spacing in em security after angular upgrade

--- a/web/projects/em/src/app/settings/security/security-settings-page/security-settings-page.component.scss
+++ b/web/projects/em/src/app/settings/security/security-settings-page/security-settings-page.component.scss
@@ -32,7 +32,11 @@
       justify-content: flex-start;
       align-items: center;
       padding: 1.25em;
-      gap: 5rem;
+      gap: 2rem;
+
+      .button-row {
+        padding: 0;
+      }
     }
 
     > .tab-container {
